force-app/main/default/objects/Assigned_Gate__c/Assigned_Gate__c.object-meta.xml
<CustomObject>
    <label>Assigned Gate</label>
    <nameField>
        <label>Assigned Gate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assigned Gates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>