force-app/main/default/objects/Assigned_Gate__c/fields/Gate__c.field-meta.xml
<CustomField>
    <fullName>Gate__c</fullName>
    <label>Gate</label>
    <referenceTo>Gate__c</referenceTo>
    <relationshipLabel>Assigned Gates</relationshipLabel>
    <relationshipName>Assigned_Gates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>