force-app/main/default/objects/Assigned_Gate__c/fields/Gate_Id_And_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Gate_Id_And_Project_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Gate Id And Project Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>