force-app/main/default/objects/Assigned_Gate__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Assigned Gates</relationshipLabel>
    <relationshipName>Assigned_Gates</relationshipName>
    <type>Lookup</type>
</CustomField>