force-app/main/default/objects/Assigned_Gate__c/fields/Weighting__c.field-meta.xml
<CustomField>
    <fullName>Weighting__c</fullName>
    <label>Weighting</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>